			       =================
				BOGOFILTER NEWS
			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	The sections

        INCOMPATIBLE CHANGES IN BOGOFILTER (version)
and     MAJOR CHANGES IN BOGOFILTER (version)

	are particularly important.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-03-25

	* Add error checking to bogoutil's ROBX calculation.

	* Allow --db-verify to work for non-transactional databases.

	* Repair several minor defects around --db-print-pagesize.  Support
	  page size detection with Berkeley DB 3.1 and 3.2 (it was already
	  supported for 3.3 - 4.3). Offer --db-print-pagesize function in
	  bogoutil --help when compiled against SQLite3.

	* Add more intensive bogoutil inspection to the test suite.

	* Fix incomplete cleanups that broke several bogoutil functions again,
	  among them --db-recover[-harder], --db-remove-environment,
	  --db-verify and --db-print-pagesize.

	* Let SQLite3 retry when the database is busy (rather than locked).

0.94.2	2005-03-24

	* Fix SQLite3 open problem, trying again when the table it is
          locked.

	2005-03-23

	* Fix --enable-iconv breaking with non-ASCII default charset.

	* bogolexer now understands the --charset-default options.

	2005-03-22

	* Fix SQLite3 regression in 0.94.0 that broke consistency guarantees
	  and caused a _massive_ slowdown.

	* Add 'bogoutil --db-print-pagesize', to query the database size,
	  useful to replace running awk on 'db_stat -d database.db' output.

	2005-03-20

	* Fixed dirname/filename problem in bogotune.

0.94.1	2005-03-16

	* Long options cleanup: options that have no meaning for a particular
	  program are now rejected, to meet common expectations. The option
	  parsing code was cleaned up and is easier to maintain now.

	2005-03-14

	* Add 'bogoutil --db-checkpoint', to replace db_checkpoint -1h.

	2005-03-13
