@@ -31,3 +31,7 @@ Henning Makholm
 Charles A. Edwards
 Pablo Rosciani
 Pavel Kankovsky
+Ben Finney
+Bill McClain
+Alfons Hoogervorst
+Ciprian Popovici
